--- a/elements/hero-block-2/hero-block.html
+++ b/elements/hero-block-2/hero-block.html
@@ -24,7 +24,7 @@
         }
 
         ::content .logo {
-            height: 100px;
+            text-align: center;
         }
 
         ::content .slogan,
