--- a/elements/elements.vulcanized.html
+++ b/elements/elements.vulcanized.html
@@ -21210,7 +21210,7 @@ iron-selector:not(.narrow-layout) #main ::content [paper-drawer-toggle] {
         }
 
         ::content .logo {
-            height: 100px;
+            text-align: center;
         }
 
         ::content .slogan,
