--- a/elements/elements.vulcanized.html
+++ b/elements/elements.vulcanized.html
@@ -21211,6 +21211,7 @@ iron-selector:not(.narrow-layout) #main ::content [paper-drawer-toggle] {
 
         ::content .logo {
             text-align: center;
+			width:100%;
         }
 
         ::content .slogan,
