--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -64,15 +64,15 @@
                     logoUrl: '../images/partners/google.svg',
                 }]
             }, {
-                title: 'Diamond sponsors',
+                title: 'Local sponsors',
                 logos: [{
-                    name: 'Eleks',
-                    url: 'http://eleks.com/',
-                    logoUrl: '../images/partners/eleks.svg'
+                    name: 'TBA',
+                    url: '#',
+                    logoUrl: '#'
                 }, {
-                    name: 'SoftServe',
-                    url: 'https://softserve.ua/en/',
-                    logoUrl: '../images/partners/softserve.svg'
+                    name: 'TBA',
+                    url: '#',
+                    logoUrl: '#'
                 }]
             }];
         }
