--- a/elements/map-block/map-block.html
+++ b/elements/map-block/map-block.html
@@ -18,8 +18,8 @@
         }
     </style>
     <template>
-        <google-map class="fit" zoom="15" latitude="49.809841" longitude="23.982805" styles="[[options]]" disable-zoom disable-default-ui>
-            <google-map-marker latitude="49.809841" longitude="23.972805"></google-map-marker>
+        <google-map class="fit" zoom="15" latitude="40.1963824" longitude="44.4800065" styles="[[options]]" disable-zoom disable-default-ui>
+            <google-map-marker latitude="40.1963824" longitude="44.4800065"></google-map-marker>
         </google-map>
         <div class="container card-container relative layout horizontal">
             <div class="flex"></div>
@@ -27,8 +27,7 @@
                 <div class="card relative">
                     <div class="card-content">
                         <h5>Location</h5>
-                        <span>Newly built Pivdennyi Expo is a long-awaited exhibition center in Lviv, which can fulfill the needs of the large-scale event. With convenient geographical position, well-planned infrastructure and modern equipment, expocentre will
-                            provide the nicest atmosphere for knowledge exchange and networking.</span>
+                        <span>Tumo is a new kind of after-school learning environment where thousands of students aged 12-18 are in charge of their own learning. Guided by skilled educators and mentored by media professionals, students navigate through their personal learning plans via the Tumo World, a special learning interface that prepares them for hands-on practice. Specialized workshops, guest lectures and community events give students a chance to apply their knowledge and skills to the world around them.</span>
                     </div>
                     <div class="card-content">
                         <a class="bottom-link" href="https://www.google.com/maps/dir//49.8097687,23.9727791/@49.8099885,23.9727469,18z" target="_blank">Get directions</a>
