--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -66,13 +66,13 @@
             }, {
                 title: 'Local sponsors',
                 logos: [{
-                    name: 'TBA',
-                    url: '#',
-                    logoUrl: '#'
+                    name: 'Google',
+                    url: 'https://www.google.com.ua/intl/en/about/',
+                    logoUrl: '../images/partners/google.svg',
                 }, {
-                    name: 'TBA',
-                    url: '#',
-                    logoUrl: '#'
+                    name: 'Google',
+                    url: 'https://www.google.com.ua/intl/en/about/',
+                    logoUrl: '../images/partners/google.svg',
                 }]
             }];
         }
