--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -64,15 +64,15 @@
                     logoUrl: '../images/partners/google.svg',
                 }]
             }, {
-                title: 'Local sponsors',
+                title: 'Diamond sponsors',
                 logos: [{
-                    name: 'Google',
-                    url: 'https://www.google.com.ua/intl/en/about/',
-                    logoUrl: '../images/partners/google.svg',
+                    name: 'TBA',
+                    url: 'http://eleks.com/',
+                    logoUrl: '../images/partners/eleks.svg'
                 }, {
-                    name: 'Google',
-                    url: 'https://www.google.com.ua/intl/en/about/',
-                    logoUrl: '../images/partners/google.svg',
+                    name: 'TBA',
+                    url: 'https://softserve.ua/en/',
+                    logoUrl: '../images/partners/softserve.svg'
                 }]
             }];
         }
