--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -64,15 +64,15 @@
                     logoUrl: '../images/partners/google.svg',
                 }]
             }, {
-                title: 'Diamond sponsors',
+                title: 'Organizers',
                 logos: [{
-                    name: 'TBA',
-                    url: 'http://eleks.com/',
-                    logoUrl: '../images/partners/eleks.svg'
+                    name: 'GDG Armenia',
+                    url: 'http://gdg.am',
+                    logoUrl: '../images/partners/gdg-armenia.svg'
                 }, {
-                    name: 'TBA',
-                    url: 'https://softserve.ua/en/',
-                    logoUrl: '../images/partners/softserve.svg'
+                    name: 'TUMO',
+                    url: 'http://tumo.org',
+                    logoUrl: '../images/partners/tumo.svg'
                 }]
             }];
         }
