--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -68,11 +68,11 @@
                 logos: [{
                     name: 'GDG Armenia',
                     url: 'http://gdg.am',
-                    logoUrl: '../images/partners/gdg-armenia.svg'
+                    logoUrl: '../images/partners/gdg-armenia.svg',
                 }, {
                     name: 'TUMO',
                     url: 'http://tumo.org',
-                    logoUrl: '../images/partners/tumo.svg'
+                    logoUrl: '../images/partners/tumo.svg',
                 }]
             }];
         }
