--- a/elements/map-block/map-block.html
+++ b/elements/map-block/map-block.html
@@ -30,7 +30,7 @@
                         <span>Tumo is a new kind of after-school learning environment where thousands of students aged 12-18 are in charge of their own learning. Guided by skilled educators and mentored by media professionals, students navigate through their personal learning plans via the Tumo World, a special learning interface that prepares them for hands-on practice. Specialized workshops, guest lectures and community events give students a chance to apply their knowledge and skills to the world around them.</span>
                     </div>
                     <div class="card-content">
-                        <a class="bottom-link" href="https://www.google.com/maps/dir//49.8097687,23.9727791/@49.8099885,23.9727469,18z" target="_blank">Get directions</a>
+                        <a class="bottom-link" href="https://www.google.com/maps/dir//Tumo,+Halabyan+Street,+Yerevan,+Armenia/@40.1964421,44.4430987,13z" target="_blank">Get directions</a>
                     </div>
                 </div>
             </div>
