--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -61,7 +61,7 @@
                 logos: [{
                     name: 'Google',
                     url: 'https://www.google.com.ua/intl/en/about/',
-                    logoUrl: '../images/partners/google.svg',
+                    logoUrl: '../images/partners/google.svg'
                 }]
             }]
             }];
