--- a/elements/logos-block/logos-block.html
+++ b/elements/logos-block/logos-block.html
@@ -63,7 +63,17 @@
                     url: 'https://www.google.com.ua/intl/en/about/',
                     logoUrl: '../images/partners/google.svg'
                 }]
-            }]
+            }, {
+                title: 'Organizers',
+                logos: [{
+                    name: 'GDG Armenia',
+                    url: 'http://gdg.am',
+                    logoUrl: '../images/partners/gdg-armenia.svg'
+                }, {
+                    name: 'TUMO',
+                    url: 'http://tumo.org',
+                    logoUrl: '../images/partners/tumo.svg'
+                }]
             }];
         }
     });
