--- a/elements/photo-block/photo-block.html
+++ b/elements/photo-block/photo-block.html
@@ -24,10 +24,10 @@
             </div>
             <div class="flex layout vertical">
                 <div class="flex relative">
-                    <iron-image src="{{photos.small.0}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
+                    <iron-image src="{{photos.small}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
                 </div>
                 <div class="flex relative hidden-xs">
-                    <iron-image src="{{photos.small.0}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
+                    <iron-image src="{{photos.small}}" class="placeholder-color fit" sizing="cover" preload fade></iron-image>
                 </div>
             </div>
         </div>
