--- a/elements/map-block/map-block.html
+++ b/elements/map-block/map-block.html
@@ -26,7 +26,7 @@
             <div class="flex">
                 <div class="card relative">
                     <div class="card-content">
-                        <h5>Location</h5>
+                        <h5>Venue: Tumo Center For Creative Technologies</h5>
                         <span>Newly built Pivdennyi Expo is a long-awaited exhibition center in Lviv, which can fulfill the needs of the large-scale event. With convenient geographical position, well-planned infrastructure and modern equipment, expocentre will
                             provide the nicest atmosphere for knowledge exchange and networking.</span>
                     </div>
